--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 </head>
 <body>
     <h1>Facebook Integration</h1>
-    <h5>Below we are testing our Facebook SDK Integration</h5>
+    <h5>Below we are testing our Facebook SDK</h5>
     <img src="images.gif" />
     <script>
   window.fbAsyncInit = function() {
@@ -24,5 +24,11 @@
      fjs.parentNode.insertBefore(js, fjs);
    }(document, 'script', 'facebook-jssdk'));
 </script>
+<div
+  class="fb-like"
+  data-share="true"
+  data-width="450"
+  data-show-faces="true">
+</div>
 </body>
 </html>
