--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <body>
     <h1>Facebook Integration</h1>
     <h5>Below we are testing our Facebook SDK</h5>
-    <img src="images.gif" />
+    <img src="images.gif"></img>
     <script>
   window.fbAsyncInit = function() {
     FB.init({
